@@ -31,7 +31,7 @@ Todoyu::$CONFIG['EXT']['timetracking']['info'] = array(
 		'company'	=> 'snowflake productions GmbH, Zurich'
 	),
 	'state'			=> 'stable',
-	'version'		=> '1.1.3',
+	'version'		=> '1.1.4',
 	'constraints' => array(
 		'depends' => array(
 			'contact'	=> '1.1.0',
